--- a/source/less/components/advantage.less
+++ b/source/less/components/advantage.less
@@ -50,12 +50,12 @@
 }
 
 .advantage:not(:first-child):not(:nth-child(2)) {
-  // background-color: #eeeeee;
+  background-color: #eeeeee;
 }
 
 .advantage__wrapper {
   color: #ffffff;
-  // background-color: #81b3d2;
+  background-color: #81b3d2;
 
   @media (min-width: @tablet-width) {
     display: flex;
