--- a/source/less/components/media-player.less
+++ b/source/less/components/media-player.less
@@ -9,7 +9,7 @@
   background-color: rgba(1, 1, 1, 0.4);
 
   @media (max-width: @mobile-width-only) {
-    width: 80%;
+    width: 280px;
     height: 45px;
     margin: 0 auto;
   }
@@ -17,7 +17,7 @@
 
 .media-player--mobile {
   @media (max-width: @mobile-width-only) {
-    width: 80%;
+    width: 280px;
     margin: 0 auto;
     transform: translateY(100%);
     bottom: 0;
