--- a/source/less/components/video-presentation.less
+++ b/source/less/components/video-presentation.less
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   text-align: center;
 
-  @media (max-width:@mobile-width-only) {
+  @media (max-width: @mobile-width-only) {
     margin-bottom: 28px;
   }
 
@@ -39,7 +39,7 @@
 
   @media (min-width: @tablet-width) {
     width: 450px;
-    margin: 0 auto 80px
+    margin: 0 auto 80px;
   }
 }
 
