--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -25,6 +25,7 @@
   margin: 0 auto;
   width: 290px;
   text-align: center;
+  color: #333333;
 
   @media (min-width: @tablet-width) {
     width: 500px;
