--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -232,7 +232,7 @@
       color: #81b3d2;
     }
 
-    &:active {
+    &:active:not(.main-nav__item--current-link) {
       color: rgba(0, 0, 0, 0.3);
     }
   }
