--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -52,6 +52,15 @@
   width: 47px;
   height: 48px;
   background-color: #81b3d2;
+
+  &:hover {
+    background-color: #669ec0;
+    cursor: pointer;
+  }
+
+  &:active {
+    background-color: #5496bd;
+  }
 }
 
 .page-footer__social-link {
@@ -65,6 +74,14 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
+  }
+
+  &:hover {
+    fill: #81b3d2;
+  }
+
+  &:active {
+    fill: rgba(0, 0, 0, 0.3);
   }
 }
 
