--- a/source/less/components/progress.less
+++ b/source/less/components/progress.less
@@ -28,4 +28,12 @@
   border-radius: 100px;
   background-color: #ffffff;
   border: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:active {
+    fill: rgba(255, 255, 255, 0.6);
+  }
 }
