--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -2,20 +2,20 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 368px 306px 306px 367px;
+    grid-template-rows: repeat(4, auto);
   }
 
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 366px 207px 221px 367px;
+    grid-template-rows: repeat(4, auto);
   }
 }
 
 .form__group {
   border: 0 none;
   padding: 0;
-  margin: 0 0 29px;
+  margin: 0 0 25px;
 
   @media (min-width: @tablet-width) {
     margin: 0;
@@ -24,40 +24,59 @@
 
 .form__group--name {
   @media (min-width: @tablet-width) {
+    position: relative;
     grid-column: ~"2 / 3";
     grid-row: ~"1 / 2";
   }
 
   @media (min-width: @desktop-width) {
-    position: relative;
     width: 400px;
     margin-left: auto;
   }
 }
 
 .form__group--contact {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 37px;
+  }
+
   @media (min-width: @tablet-width) {
+    position: relative;
     grid-column: ~"1 / 3";
     grid-row: ~"2 / 3";
   }
 
-  @media (min-width: @desktop-width) {
-    position: relative;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 32px;
   }
 }
 
 .form__group--impression {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 37px;
+  }
+
   @media (min-width: @tablet-width) {
     order: -1;
     grid-column: ~"1 / 2";
     grid-row: ~"1 / 2";
   }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 64px;
+  }
 }
 
 .form__group--attraction {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 6px;
+  }
+
   @media (min-width: @tablet-width) {
+    position: relative;
     grid-column: ~"1 / 3";
     grid-row: ~"3 / 4";
+    margin-bottom: 25px;
 
     .form__list {
       display: flex;
@@ -77,6 +96,8 @@
   }
 
   @media (min-width: @desktop-width) {
+    margin-bottom: 21px;
+
     .form__list {
       margin: 0;
     }
@@ -96,6 +117,10 @@
 .form__group--emotions {
   position: relative;
 
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 20px;
+  }
+
   @media (min-width: @tablet-width) {
     grid-column: ~"1 / 3";
     grid-row: ~"4 / 5";
@@ -104,7 +129,7 @@
 
 .form__title {
   padding: 0;
-  margin: 0 auto 19px;
+  margin: 0 auto 20px;
   width: 300px;
   font-size: 18px;
   font-weight: 700;
@@ -112,12 +137,25 @@
   text-transform: uppercase;
   text-align: center;
 
+  @media (max-width: @mobile-width-only) {
+    width: min-content;
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 57px;
   }
 }
 
 .form__title--impression-indent {
+  @media (max-width: @mobile-width-only) {
+    width: max-content;
+    margin-bottom: 37px;
+  }
+
   @media (min-width: @tablet-width) {
     margin-left: 0;
     margin-bottom: 72px;
@@ -131,8 +169,12 @@
 }
 
 .form__title--contact-indent {
+  @media (max-width: @mobile-width-only) {
+    width: max-content;
+  }
+
   @media (min-width: @tablet-width) {
-    margin-bottom: 20px;
+    margin-bottom: 23px;
   }
 
   @media (min-width: @desktop-width) {
@@ -141,7 +183,20 @@
 }
 
 .form__title--attraction-indent {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 36px;
+  }
   margin-bottom: 58px;
+}
+
+.form__title--emotions-indent {
+  @media (max-width: @mobile-width-only) {
+    width: max-content;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 52px;
+  }
 }
 
 .form__title--name {
@@ -160,12 +215,40 @@
 .form__title--name-elements {
   display: block;
 
+  @media (min-width: @tablet-width) {
+    ::before {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 215px;
+      right: 179px;
+      width: 292px;
+      height: 1px;
+      transform: rotate(90deg);
+      background-color: #dbdbdb;
+    }
+  }
+
   @media (min-width: @desktop-width) {
     ::before {
       content: "";
       display: block;
       position: absolute;
-      top: 140px;
+      bottom: 208px;
+      left: -220px;
+      width: 280px;
+      height: 1px;
+      transform: rotate(90deg);
+      background-color: #dbdbdb;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    ::before {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 208px;
       left: -220px;
       width: 280px;
       height: 1px;
@@ -176,54 +259,78 @@
 }
 
 .form__title--contact-elements {
-  @media (min-width: @desktop-width) {
-    ::before {
+  @media (min-width: @tablet-width) {
+    &::before {
       content: "";
       display: block;
       position: absolute;
       top: 13px;
       left: 0;
-      width: 280px;
+      width: 123px;
       height: 1px;
       background-color: #dbdbdb;
     }
 
-    ::after {
+    &::after {
       content: "";
       display: block;
       position: absolute;
       top: 13px;
       right: 0;
-      width: 280px;
+      width: 123px;
       height: 1px;
       background-color: #dbdbdb;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      content: "";
+      width: 280px;
+    }
+
+    &::after {
+      content: "";
+      width: 280px;
     }
   }
 }
 
 
 .form__title--attraction-elements {
-  @media (min-width: @desktop-width) {
-    ::before {
+  @media (min-width: @tablet-width) {
+    &::before {
       content: "";
       display: block;
       position: absolute;
       top: 26px;
       left: 0;
-      width: 280px;
+      width: 123px;
       height: 1px;
       background-color: #dbdbdb;
     }
 
-    ::after {
+    &::after {
       content: "";
       display: block;
       position: absolute;
       top: 26px;
       right: 0;
-      width: 280px;
+      width: 123px;
       height: 1px;
       background-color: #dbdbdb;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &::before {
+      content: "";
+      width: 280px;
+    }
+
+    &::after {
+      content: "";
+      width: 280px;
     }
   }
 }
@@ -243,11 +350,7 @@
 
 .form__item {
   list-style: none;
-  margin-bottom: 30px;
-
-  @media (max-width: @mobile-width-only) {
-    margin-right: 20px;
-  }
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 22px;
@@ -258,13 +361,27 @@
   }
 }
 
+.form__item--attraction-indent {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 54px;
+  }
+}
+
 .form__item--impression-indent:not(:last-child) {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 43px;
+  }
+
   @media (min-width: @tablet-width) {
     margin-bottom: 52px;
   }
 }
 
 .form__item--contact-input-direction {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 10px;
+  }
+
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: space-between;
@@ -272,7 +389,9 @@
 }
 
 .form__contact-input--wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 58px;
+  grid-template-rows: 1fr;
 }
 
 .form__nomination-wrapper {
@@ -303,18 +422,6 @@
   }
 }
 
-.nomination-contact--visible-mobile-media {
-  display: block;
-
-  @media (min-width: @desktop-width) {
-    display: none;
-  }
-}
-
-.nomination-contact--visible-desktop {
-  display: block;
-}
-
 .form__input {
   position: relative;
   background-color: #f2f2f2;
@@ -326,13 +433,40 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
+
+  &::placeholder {
+    color: #000000;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 26px;
+  }
+
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &:focus-visible {
+    outline: none;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    box-shadow: inset 4px 4px 0 0 #e5e5e5, inset -4px -4px 0 0 #e5e5e5;
+  }
 }
 
-.form__input::placeholder {
-  color: #000000;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 26px;
+.nomination-contact--visible-mobile-media {
+  display: block;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.nomination-contact--visible-desktop {
+  display: block;
+
+  @media (max-width: @tablet-width) {
+    margin-left: 5px;
+  }
 }
 
 .form__input--spin::-webkit-outer-spin-button,
@@ -366,6 +500,14 @@
   width: 54px;
   height: 54px;
   background-color: #f2f2f2;
+
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &:active {
+    background-color: #d5d5d5;
+  }
 }
 
 input[type="radio"] + .form__mark {
@@ -405,11 +547,7 @@ input[type="checkbox"]:checked + .form__mark {
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
-  margin-left: 73px;
-
-  @media (min-width: @tablet-width) {
-    margin-left: 77px;
-  }
+  margin-left: 78px;
 }
 
 .form__textarea {
@@ -423,17 +561,27 @@ input[type="checkbox"]:checked + .form__mark {
   padding: 13px 22px;
   max-width: 280px;
   box-sizing: border-box;
-  height: 160px;
   margin-bottom: 51px;
+
+  @media (max-width: @mobile-width-only) {
+    height: 160px;
+  }
 
   @media (min-width: @tablet-width) {
     min-width: 648px;
-    margin-bottom: 94px;
+    margin-bottom: 58px;
+    height: 160px;
   }
 
   @media (min-width: @desktop-width) {
     min-width: 960px;
-    margin-bottom: 91px;
+  }
+
+  &:focus-visible {
+    outline: none;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    box-shadow: inset 4px 4px 0 0 #e5e5e5, inset -4px -4px 0 0 #e5e5e5;
   }
 }
 
@@ -461,6 +609,15 @@ input[type="checkbox"]:checked + .form__mark {
 
   @media (min-width: @desktop-width) {
     width: 480px;
+  }
+
+  &:hover {
+    background-color: #669ec0;
+    cursor: pointer;
+  }
+
+  &:active {
+    background-color: #5496bd;
   }
 }
 
