--- a/source/less/components/reason.less
+++ b/source/less/components/reason.less
@@ -79,6 +79,7 @@
   line-height: 21px;
   text-transform: uppercase;
   width: 210px;
+  color: #333333;
 
   @media (max-width: @mobile-width-only) {
     margin: 0;
