--- a/source/less/components/reasons.less
+++ b/source/less/components/reasons.less
@@ -2,9 +2,12 @@
   list-style: none;
   padding: 0;
 
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 54px;
+  }
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
   }
 }
