--- a/source/less/components/modal.less
+++ b/source/less/components/modal.less
@@ -21,7 +21,7 @@
   transform: translateY(-50%);
 }
 
-.modal--error--opened {
+.modal--error-opened {
   @media (min-width: @tablet-width) {
     margin-left: 184px;
   }
@@ -31,7 +31,7 @@
   }
 }
 
-.modal--successfull--opened {
+.modal--successfull-opened {
   @media (min-width: @tablet-width) {
     width: 640px;
     margin-left: 64px;
@@ -90,6 +90,7 @@
 .modal__button {
   display: block;
   color: #ffffff;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
