--- a/source/less/components/progress.less
+++ b/source/less/components/progress.less
@@ -21,7 +21,7 @@
 
 .progress__button {
   position: absolute;
-  left: 30%;
+  left: 203px;
   transform: translateY(-40%);
   width: 13px;
   height: 13px;
