--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -44,11 +44,14 @@
     position: relative;
     grid-column: ~"1 / 3";
     grid-row: ~"2 / 3";
-  }
-
-  @media (min-width: @tablet-width) {
     margin-bottom: 32px;
   }
+
+  @media (min-width: @desktop-width) {
+     margin-bottom: 30px;
+  }
+
+ 
 }
 
 .form__group--impression {
@@ -60,10 +63,11 @@
     order: -1;
     grid-column: ~"1 / 2";
     grid-row: ~"1 / 2";
+    margin-bottom: 64px;
   }
 
-  @media (min-width: @tablet-width) {
-    margin-bottom: 64px;
+  @media (min-width: @desktop-width) {
+    margin-bottom: 61px;
   }
 }
 
@@ -104,8 +108,61 @@
   }
 }
 
+.form__item {
+  list-style: none;
+  margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 22px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 22px;
+  }
+}
+
+.form__item--attraction-indent {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 54px;
+  }
+}
+
+.form__item--attraction-indent:not(:nth-child(4n)) {
+  @media (min-width: @desktop-width) {
+    margin-left: 20px;
+  }
+}
+
+.form__item--attraction-indent:not(:first-child) {
+  @media (min-width: @desktop-width) {
+    margin-left: 20px;
+  }
+}
+
+.form__item--impression-indent:not(:last-child) {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 43px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 52px;
+  }
+}
+
+.form__item--contact-input-direction {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .form__item--name-indent {
   @media (min-width: @tablet-width) {
+    margin-bottom: 20px;
     margin-left: 58px;
   }
 
@@ -118,7 +175,7 @@
   position: relative;
 
   @media (max-width: @mobile-width-only) {
-    margin-bottom: 20px;
+    margin-bottom: 28px;
   }
 
   @media (min-width: @tablet-width) {
@@ -164,7 +221,7 @@
 
   @media (min-width: @desktop-width) {
     text-align: left;
-    margin: 0 0 72px 72px;
+    margin: 0 0 75px 81px;
   }
 }
 
@@ -192,10 +249,15 @@
 .form__title--emotions-indent {
   @media (max-width: @mobile-width-only) {
     width: max-content;
+    margin-bottom: 10px;
   }
 
   @media (min-width: @tablet-width) {
     margin-bottom: 52px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 56px;
   }
 }
 
@@ -212,7 +274,7 @@
   }
 }
 
-.form__title--name-elements {
+.form__title-wrapper--name {
   display: block;
 
   @media (min-width: @tablet-width) {
@@ -258,7 +320,7 @@
   }
 }
 
-.form__title--contact-elements {
+.form__title-wrapper--contact {
   @media (min-width: @tablet-width) {
     &::before {
       content: "";
@@ -297,7 +359,7 @@
 }
 
 
-.form__title--attraction-elements {
+.form__title-wrapper--elements {
   @media (min-width: @tablet-width) {
     &::before {
       content: "";
@@ -348,47 +410,7 @@
   }
 }
 
-.form__item {
-  list-style: none;
-  margin-bottom: 20px;
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 22px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-bottom: 22px;
-  }
-}
-
-.form__item--attraction-indent {
-  @media (max-width: @mobile-width-only) {
-    margin-bottom: 54px;
-  }
-}
-
-.form__item--impression-indent:not(:last-child) {
-  @media (max-width: @mobile-width-only) {
-    margin-bottom: 43px;
-  }
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 52px;
-  }
-}
-
-.form__item--contact-input-direction {
-  @media (max-width: @mobile-width-only) {
-    margin-bottom: 10px;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.form__contact-input--wrapper {
+.form__input-wrapper {
   display: grid;
   grid-template-columns: 1fr 58px;
   grid-template-rows: 1fr;
@@ -428,8 +450,9 @@
   width: 100%;
   box-sizing: border-box;
   border: none;
-  padding: 18px 22px 14px 22px;
+  padding: 18px 27px 14px;
   min-height: 58px;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
@@ -453,19 +476,14 @@
   }
 }
 
-.nomination-contact--visible-mobile-media {
-  display: block;
+.form__input--width {
+  @media (min-width: @tablet-width) {
+    padding-left: 22px;
+  }
 
   @media (min-width: @desktop-width) {
-    display: none;
-  }
-}
-
-.nomination-contact--visible-desktop {
-  display: block;
-
-  @media (max-width: @tablet-width) {
-    margin-left: 5px;
+    padding-left: 20px;
+    width: 257px;
   }
 }
 
@@ -473,6 +491,23 @@
 .form__input--spin::-webkit-inner-spin-button {
   appearance: none;
 }
+
+.form__text--visible-mobile-media {
+  display: block;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.form__text--visible-desktop {
+  display: block;
+
+  @media (max-width: @tablet-width) {
+    margin-left: 5px;
+  }
+}
+
 
 .form__icon-wrapper {
   background-color: #e6e6e6;
@@ -558,23 +593,25 @@ input[type="checkbox"]:checked + .form__mark {
   line-height: 26px;
   background-color: #f2f2f2;
   border: none;
-  padding: 13px 22px;
+  padding: 18px 22px;
   max-width: 280px;
   box-sizing: border-box;
-  margin-bottom: 51px;
+  margin-bottom: 60px;
 
   @media (max-width: @mobile-width-only) {
     height: 160px;
+    margin-bottom: 52px;
   }
 
   @media (min-width: @tablet-width) {
     min-width: 648px;
-    margin-bottom: 58px;
+    margin-bottom: 53px;
     height: 160px;
   }
 
   @media (min-width: @desktop-width) {
     min-width: 960px;
+    margin-bottom: 54px;
   }
 
   &:focus-visible {
@@ -595,6 +632,7 @@ input[type="checkbox"]:checked + .form__mark {
   width: 280px;
   background-color: #81b3d2;
   color: #ffffff;
+  font-family: inherit;
   font-size: 21px;
   font-weight: 700;
   line-height: 26px;
@@ -605,10 +643,12 @@ input[type="checkbox"]:checked + .form__mark {
 
   @media (min-width: @tablet-width) {
     width: 324px;
+    padding: 16px 27px 16px 16px;
   }
 
   @media (min-width: @desktop-width) {
     width: 480px;
+    padding: 15px;
   }
 
   &:hover {
