--- a/source/less/components/hotels-search.less
+++ b/source/less/components/hotels-search.less
@@ -10,19 +10,18 @@
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
-  margin: 80px auto 32px;
 
   @media (max-width: @mobile-width-only) {
-    margin: 57px auto 24px;
+    margin: 30px auto 24px;
   }
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
-    margin: 18px auto 34px;
+    margin: 58px auto 33px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 42px auto 32px;
+    margin: 56px auto 32px;
   }
 }
 
@@ -31,7 +30,7 @@
   line-height: 24px;
   text-transform: uppercase;
   text-align: center;
-  margin: 0 auto 27px;
+  margin: 0 auto 25px;
   color: #333333;
 
   @media (min-width: @tablet-width) {
@@ -58,6 +57,7 @@
   padding-bottom: 18px;
   color: #ffffff;
   min-width: 280px;
+  font-family: inherit;
   font-size: 21px;
   font-weight: 700;
   line-height: 26px;
