--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -38,7 +38,11 @@
   margin: 0;
 
   @media (max-width: @mobile-width-only) {
-    margin: 0 0 40px;
+    margin: 0 0 43px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 0 0 4px;
   }
 }
 
@@ -71,13 +75,17 @@
   display: flex;
   justify-content: center;
   margin-bottom: 29px;
+  
+  @media (max-width: @mobile-width-only) {
+    margin-right: 10px;
+  }
 
   @media (min-width: @tablet-width) {
     margin: 0;
   }
 
   &:hover {
-    fill: #81b3d2;
+    fill: rgb(129, 179, 210);
   }
 
   &:active {
@@ -99,5 +107,5 @@
   text-align: center;
   align-self: center;
   margin: 0;
-  width: 121px;
+  min-width: 113px;
 }
