--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -107,7 +107,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 22px 0 15px 20px;
+    margin: 16px 0 15px 20px;
   }
 }
 
@@ -136,7 +136,11 @@
 
   @media (min-width: @tablet-width) {
     align-items: center;
-    margin-right: 21px;
+    margin-right: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 25px;
   }
 }
 
@@ -146,6 +150,14 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 9px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 14px;
+  }
 }
 
 .post__like-icon {
