--- a/source/less/components/reason.less
+++ b/source/less/components/reason.less
@@ -1,7 +1,8 @@
 .reason {
   @media (max-width: @mobile-width-only) {
-    margin: 0;
-    margin-top: 18px;
+    &:not(:first-child) {
+      margin: 18px 0 0;
+    }
   }
 
   @media (min-width: @tablet-width) {
