--- a/source/less/components/reasons.less
+++ b/source/less/components/reasons.less
@@ -3,7 +3,8 @@
   padding: 0;
 
   @media (max-width: @mobile-width-only) {
-    margin-bottom: 54px;
+    margin-top: 27px;
+    margin-bottom: 35px;
   }
 
   @media (min-width: @tablet-width) {
