--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -228,17 +228,17 @@
     line-height: 26px;
     padding: 16px 0;
 
-    &:hover:not(.main-nav__item-link--current) {
+    &:hover:not(.main-nav__link--current) {
       color: #81b3d2;
     }
 
-    &:active:not(.main-nav__item-link--current) {
+    &:active:not(.main-nav__link--current) {
       color: rgba(0, 0, 0, 0.3);
     }
   }
 }
 
-.main-nav__item-link--current {
+.main-nav__link--current {
   color: #766357;
 }
 
