--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -125,13 +125,7 @@
   }
 }
 
-.form__item--attraction-indent:not(:nth-child(4n)) {
-  @media (min-width: @desktop-width) {
-    margin-left: 20px;
-  }
-}
-
-.form__item--attraction-indent:not(:first-child) {
+.form__item--attraction-indent:not(:first-child):not(:nth-child(4n)) {
   @media (min-width: @desktop-width) {
     margin-left: 20px;
   }
