Защита личного проекта «Седона»

--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -12,6 +12,8 @@
   }
 }
 
+//group
+
 .form__group {
   border: 0 none;
   padding: 0;
@@ -91,6 +93,8 @@
     grid-row: ~"4 / 5";
   }
 }
+
+//title
 
 .form__title {
   padding: 0;
@@ -202,6 +206,8 @@
   }
 }
 
+//list
+
 .form__list {
   list-style: none;
   padding: 0;
@@ -214,6 +220,8 @@
     justify-content: space-between;
   }
 }
+
+//item
 
 .form__item {
   list-style: none;
@@ -236,6 +244,8 @@
     justify-content: space-between;
   }
 }
+
+//input
 
 .form__contact-input--wrapper {
   width: 100%;
@@ -288,6 +298,8 @@
   appearance: none;
 }
 
+//icon
+
 .form__icon-wrapper {
   position: relative;
   background-color: #e6e6e6;
@@ -304,10 +316,14 @@
   height: 100%;
 }
 
+//label
+
 .form__label {
   display: flex;
   align-items: center;
 }
+
+//mark
 
 .form__mark {
   display: flex;
@@ -352,12 +368,16 @@ input[type="checkbox"]:checked + .form__mark {
   }
 }
 
+//name
+
 .form__name {
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
   margin-left: 73px;
 }
+
+//textarea
 
 .form__textarea {
   color: #000000;
@@ -389,6 +409,8 @@ input[type="checkbox"]:checked + .form__mark {
   font-size: 18px;
   line-height: 26px;
 }
+
+//button
 
 .form__button {
   width: 280px;
