--- a/source/less/components/form.less
+++ b/source/less/components/form.less
@@ -46,7 +46,7 @@
     position: relative;
     grid-column: ~"1 / 3";
     grid-row: ~"2 / 3";
-    margin-bottom: 32px;
+    margin-bottom: 27px;
   }
 
   @media (min-width: @desktop-width) {
@@ -56,14 +56,14 @@
 
 .form__group--impression {
   @media (max-width: @mobile-width-only) {
-    margin-bottom: 37px;
+    margin-bottom: 29px;
   }
 
   @media (min-width: @tablet-width) {
     order: -1;
     grid-column: ~"1 / 2";
     grid-row: ~"1 / 2";
-    margin-bottom: 64px;
+    margin-bottom: 56px;
   }
 
   @media (min-width: @desktop-width) {
@@ -105,50 +105,6 @@
     .form__list {
       margin: 0;
     }
-  }
-}
-
-.form__item--attraction-indent {
-  @media (max-width: @mobile-width-only) {
-    margin-bottom: 54px;
-  }
-}
-
-.form__item--attraction-indent:not(:first-child):not(:nth-child(4n)) {
-  @media (min-width: @desktop-width) {
-    margin-left: 20px;
-  }
-}
-
-.form__item--impression-indent:not(:last-child) {
-  @media (max-width: @mobile-width-only) {
-    margin-bottom: 43px;
-  }
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 52px;
-  }
-}
-
-.form__item--contact-input-direction {
-  @media (max-width: @mobile-width-only) {
-    margin-bottom: 10px;
-  }
-
-  @media (min-width: @desktop-width) {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.form__item--name-indent {
-  @media (min-width: @tablet-width) {
-    margin-bottom: 20px;
-    margin-left: 58px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-left: 0;
   }
 }
 
@@ -211,10 +167,11 @@
 .form__title--contact-indent {
   @media (max-width: @mobile-width-only) {
     width: max-content;
+    margin-bottom: 18px;
   }
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 23px;
+    margin-bottom: 22px;
   }
 
   @media (min-width: @desktop-width) {
@@ -401,15 +358,64 @@
   list-style: none;
   margin-bottom: 30px;
 
-  @media (max-width: @mobile-width-only) {
-    margin-right: 20px;
-    margin-bottom: 22px;
-  }
-
   @media (min-width: @desktop-width) {
     margin-bottom: 22px;
   }
 }
+
+.form__item--attraction-indent {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 54px;
+  }
+}
+
+.form__item--attraction-indent:not(:first-child):not(:nth-child(4n)) {
+  @media (min-width: @desktop-width) {
+    margin-left: 20px;
+  }
+}
+
+.form__item--impression-indent:not(:last-child) {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 43px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 52px;
+  }
+}
+
+.form__item--contact-input-direction {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 10px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 24px;
+  }
+
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.form__item--name-indent {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 20px;
+    margin-left: 58px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 0;
+  }
+}
+
 
 //input
 
@@ -435,6 +441,10 @@
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
+
+  @media (max-width: @mobile-width-only) {
+    margin: 0 15px 0 0;
+  }
 }
 
 .form__input-nomination-contact {
@@ -463,6 +473,10 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
+
+  @media (max-width: @mobile-width-only) {
+    padding: 18px 22px 14px;
+  }
 
   &::placeholder {
     color: #000000;
@@ -557,11 +571,25 @@
   }
 }
 
-input[type="radio"] + .form__mark {
+.form__radio {
+  &:focus-visible + .form__mark {
+    outline: none;
+    box-shadow: #bdbdbd 0 1px 4px, #bdbdbd 0 0 0 3px;
+  }
+}
+
+.form__radio + .form__mark {
   border-radius: 50%;
 }
 
-input[type="radio"]:checked + .form__mark {
+.form__checkbox {
+  &:focus-visible + .form__mark {
+    outline: none;
+    box-shadow: #bdbdbd 0 1px 4px, #bdbdbd 0 0 0 3px;
+  }
+}
+
+.form__radio:checked + .form__mark {
   &::after {
     content: "";
     width: 21px;
@@ -572,7 +600,7 @@ input[type="radio"]:checked + .form__mark {
   }
 }
 
-input[type="checkbox"] + .form__mark {
+.form__checkbox + .form__mark {
   border-radius: 10%;
 
   @media (min-width: @desktop-width) {
@@ -581,7 +609,7 @@ input[type="checkbox"] + .form__mark {
 }
 
 
-input[type="checkbox"]:checked + .form__mark {
+.form__checkbox:checked + .form__mark {
   &::after {
     content: "";
     width: 23px;
