--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -110,7 +110,7 @@
       content: "";
       position: absolute;
       width: 100%;
-      height: 3vh;
+      height: 7px;
       bottom: 0;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
       opacity: 0.2;
@@ -247,5 +247,5 @@
 }
 
 .main-nav--nojs .main-nav__list {
-  display: block;
+  display: flex;
 }
