--- a/source/less/components/modal.less
+++ b/source/less/components/modal.less
@@ -47,24 +47,42 @@
 }
 
 .modal__title {
-  font-size: 18px;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
-  margin: 30px auto 25px;
 
   @media (max-width: @mobile-width-only) {
-    width: 130px;
+    font-size: 18px;
+    width: 230px;
+    margin: 40px auto 25px;
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 40px;
+    width: 240px;
+    margin: 69px auto 25px;
+  }
+}
+
+.modal__title--successfull {
+  @media (min-width: @tablet-width) {
+    margin-top: 45px;
+    width: 350px;
   }
 }
 
 .modal__description {
   font-size: 14px;
-  line-height: 26px;
+  line-height: 24px;
   text-align: center;
   text-transform: uppercase;
-  margin: 0 auto 22px;
+  margin: 0 auto 20px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto 14px;
+  }
 }
 
 .modal__description--error {
@@ -80,10 +98,12 @@
 .modal__description--successfull {
   @media (max-width: @mobile-width-only) {
     width: 250px;
+    margin-bottom: 38px;
   }
 
   @media (min-width: @tablet-width) {
     width: 550px;
+    margin-bottom: 68px;
   }
 }
 
@@ -102,6 +122,24 @@
   margin: 0 auto;
   background-color: #81b3d2;
   border: none;
+
+  @media (max-width: @mobile-width-only) {
+    min-width: 180px;
+  }
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
+}
+
+.modal__button--successfull {
+  @media (max-width: @mobile-width-only) {
+    min-width: 280px;
+  }
+
+  @media (min-width: @tablet-width) {
+    min-width: 458px;
+  }
 }
 
 .modal__button--error-indent {
