--- a/source/less/components/introduce.less
+++ b/source/less/components/introduce.less
@@ -85,11 +85,46 @@
   }
 }
 
+.introduce__logo--visible-desktop {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    margin: 0  auto;
+  }
+}
+
+.introduce__logo--visible-tablet {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin: 0  auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.introduce__logo--visible-phone {
+  display: none;
+
+  @media (max-width: @mobile-width-only) {
+    display: block;
+    margin: 0  auto;
+  }
+}
+
 .introduce__img-wrapper--inner {
   padding-top: 52px;
 
   @media (min-width: @tablet-width) {
     padding-top: 95px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 100px;
   }
 }
 
@@ -107,4 +142,35 @@
   }
 
   display: inline;
+}
+
+.introduce__svg--visible-phone {
+  @media (max-width: @mobile-width-only) {
+    display: block;
+    margin: 0 auto;
+  }
+
+  display: none;
+}
+
+.introduce__svg--visible-tablet {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.introduce__svg--visible-desktop {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    margin: 0 auto;
+  }
 }
