--- a/source/less/components/modal.less
+++ b/source/less/components/modal.less
@@ -92,6 +92,7 @@
 
   @media (min-width: @tablet-width) {
     width: 280px;
+    margin: 0 auto 20px;
   }
 }
 
@@ -103,7 +104,7 @@
 
   @media (min-width: @tablet-width) {
     width: 550px;
-    margin-bottom: 68px;
+    margin-bottom: 44px;
   }
 }
 
@@ -128,6 +129,7 @@
   }
 
   @media (min-width: @tablet-width) {
+    min-width: 272px;
     font-size: 21px;
   }
 }
@@ -151,4 +153,8 @@
   width: 100%;
   padding: 20px;
   min-height: 98px;
+
+  @media (min-width: @tablet-width) {
+    padding: 44px;
+  }
 }
