--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -136,11 +136,7 @@
 
   @media (min-width: @tablet-width) {
     align-items: center;
-    margin-right: 30px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-right: 25px;
+    margin-right: 0;
   }
 }
 
@@ -152,11 +148,13 @@
   cursor: pointer;
 
   @media (min-width: @tablet-width) {
-    margin-right: 9px;
+    margin-right: 0;
+    width: 44px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 14px;
+    margin-right: 10px;
+    width: auto;
   }
 }
 
@@ -175,4 +173,6 @@
   font-weight: 700;
   line-height: 24px;
   margin: 0;
+  width: 54px;
+  text-align: left;
 }
